Refactor: Cleanup backend imports and use dynamic CORS config